# ModTranslate

./: .gitignore  README.md  index.py  package.json
.github/workflows/: release.yml
app/ModTranslate/: README.md  index.html  package.json
app/ModTranslate/src/: App.css  App.tsx  types.ts
app/ModTranslate/src-tauri/: Cargo.toml  tauri.conf.json
app/ModTranslate/src-tauri/capabilities/: default.json
app/ModTranslate/src-tauri/icons/: icon.icns
app/ModTranslate/src-tauri/src/: configure.rs  lib.rs  main.rs
app/ModTranslate/src-tauri/src/modtranslate/: core.rs  jsonc.rs  mod.rs  translate.rs  ziputil.rs
app/ModTranslate/src/components/: ExecutionSection.tsx  Header.tsx  InputSection.tsx  JarSelectionSection.tsx  OptionsSection.tsx  TranslationSettingsSection.tsx
scripts/: JsonCheck.ts
src/: loader.ts
src/modtranslate/: fs.ts  jar.ts  jsonc.ts  lang.ts  placeholders.ts  resourcepack.ts  translate.ts
src/types/: cli-table3.d.ts  log-update.d.ts
src/ui/: run_screen_ansi.ts
